<resources>
    <string name="app_name">Yummy</string>
    <string name="password">Password</string>
    <string name="email_login">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_us_now">Join us Now</string>
    <string name="login_now">Login Now</string>
    <string name="login">Login</string>
    <string name="wrong_credentials">Wrong username or password.</string>
    <string name="user">Profile</string>
    <string name="demo_card_text">Go to your profile</string>
    <string name="offer_card">Go to add new offer</string>
    <string name="order_card">Process an order</string>
    <string name="email_hint">sam@seotoolzz.com</string>
    <string name="email">Email</string>
    <string name="hint_pswd">**********</string>
    <string name="facebook">Facebook</string>
    <string name="first_name">First Name</string>
    <string name="hint_name">Sam</string>
    <string name="last_name">Last Name</string>
    <string name="rest">Do you want to make changes for restaurant?</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="save">Save changes</string>
    <string name="saved">Successfully saved!</string>
    <string name="add_new_offer">Add new offer</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="about_yummy">About Yummy</string>
    <string name="food_story">Yummy was created to make sure delicious food will not be wasted.</string>
    <string name="abu_pizza">Delicious food</string>
    <string name="money_story">You will save money by eating tasty cooked meals, savory bakery products, fruits and veggies.</string>
    <string name="abu_piggybank">Saved money</string>
    <string name="planet_story">Together we can fight the climate change and give our planet a happy bright future!</string>
    <string name="abu_planet">Happy Planet</string>
    <string name="chip">Choose categories</string>
    <string name="backery_image_card">backery image</string>
    <string name="the_demo_bakery">The Demo Bakery</string>
    <string name="go_grab_it">Grab these goodies between 17:00 and 19:00 !</string>
    <string name="_5">5€</string>
    <string name="email_user">hudsonioana.denes@gmail.com</string>
    <string name="email_status">Email</string>
    <string name="nickname">Username</string>
    <string name="username_client">Hudson</string>
    <string name="name_client">Name</string>
    <string name="name_user">Ioana Denes</string>
    <string name="profile_picture">profile picture</string>
    <string name="profile_account">Your Profile</string>
    <string name="contact_us">Any issue? Contact us!</string>
    <string name="phone_image">Phone image</string>
    <string name="button_save_order">Get it!</string>
    <string name="to_my_profile_button"><![CDATA[Go to your profile]]></string>
    <string name="to_offers_button"><![CDATA[See the available offers!]]></string>
    <string name="to_more_button"><![CDATA[More]]></string>
    <string name="my_phonenbr">0040754539786</string>
    <string name="type_of_service">type of service</string>
    <string name="error">Something went wrong!</string>
    <string name="list">List of orders</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="button_to_abu">See how you can impact on the world!</string>
    <string name="contact_us_more">Contact us</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="email_address">Email Address</string>
    <string name="let_s_set_your_preferences">Let\'s set your preferences!</string>
    <string name="savedmoney">savedmoney</string>
    <string name="Order">See what\'s in it for you today!</string>
    <string name="logout">Logout</string>
    <string name="offer">offer</string>
    <string name="user_name">Username</string>
    <string name="username">Username</string>
    <string name="your_preferences">Your preferences</string>
    <string name="imgearth">earth</string>
    <string name="you_are">You are :</string>
    <string name="bla_bla">Bla Bla</string>
    <string name="let_s_get_it_started">Let\'s get it started!</string>
    <string name="what_was_the_email_address">What was the Email Address?</string>
    <string name="send_me_a_verification_email">Send me a verification email</string>
    <string name="meat_lover">Meat lover</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten free</string>
    <string name="lactose_free">Lactose free</string>
    <string name="you_are_interested_in">You are interested in :</string>
    <string name="cooked_meals">Cooked meals</string>
    <string name="fruits_vegetables">Fruits Vegetables</string>
    <string name="bakery">Bakery</string>
</resources>
