<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/user"
        android:title="@string/user"
        android:icon="@drawable/ic_action_name"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/offer"
        android:title="@string/offer"
        android:icon="@drawable/ic_offer"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/order"
        android:title="@string/orders"
        android:icon="@drawable/ic_order"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_face"
        app:showAsAction="ifRoom|withText"/>
</menu>