<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context="com.restaurantapp.Activity_Preferences" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/logo_earth"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:layout_marginStart="270dp"
            android:src="@drawable/ic_earth"
            android:contentDescription="@string/imgearth" />

        <TextView
            android:id="@+id/tv_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/indie_flower"
            android:textStyle="bold"
            android:text="@string/your_preferences"
            android:textColor="#70416D"
            android:textSize="30sp"/>

            <LinearLayout
                android:id="@+id/linlay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pref"
                android:layout_marginTop="30dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/you_are"
                    android:textAllCaps="false"
                    android:textColor="#70416D"
                    android:textStyle="bold"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:padding="1dp"
                        android:text="@string/meat_lover"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:theme="@style/checkBox" />

                    <CheckBox
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:padding="1dp"
                        android:text="@string/vegan"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:theme="@style/checkBox" />

                    <CheckBox
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:padding="1dp"
                        android:text="@string/vegetarian"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:theme="@style/checkBox" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/bla_bla"
                    android:textAllCaps="false"
                    android:textColor="#70416D"
                    android:textStyle="bold"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_bg"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/gluten_free"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:theme="@style/checkBox"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/lactose_free"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:theme="@style/checkBox"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/you_are_interested_in"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="#70416D"
                    android:textSize="25sp" />

                <RelativeLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_bg"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/cb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/cooked_meals"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:theme="@style/checkBox" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/fruits_vegetables"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:theme="@style/checkBox"
                        tools:ignore="RelativeOverlap" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cb1"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/bakery"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:theme="@style/checkBox" />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linlay3"
                android:layout_marginTop="60dp" >

            <Button
                android:id="@+id/bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/indie_flower"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/let_s_get_it_started"
                android:textAllCaps="false"
                android:textColor="#70416D"
                android:textStyle="bold"
                android:textSize="20sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>