<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context="com.restaurantapp.modules.client.Activity_AboutUs">

    <TextView
        android:id="@+id/tv_abu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/about_yummy"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="60sp"
        android:fontFamily="@font/indie_flower"/>

    <RelativeLayout
        android:id="@+id/rel.lay.abu.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_abu"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <LinearLayout
            android:id="@+id/lin.lay.abu.1"
            android:background="@drawable/et_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_story"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"/>

            <ImageView
                android:id="@+id/logo_pizza"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="60dp"
                android:src="@drawable/ic_pizza"
                android:contentDescription="@string/abu_pizza"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin.lay.abu.2"
            android:background="@drawable/et_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin.lay.abu.1"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money_story"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium" />

            <ImageView
                android:id="@+id/logo_money"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="240dp"
                android:src="@drawable/ic_money"
                android:contentDescription="@string/abu_piggybank" />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/et_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin.lay.abu.2"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_story"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"/>

            <ImageView
                android:id="@+id/logo_earth"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="60dp"
                android:src="@drawable/ic_earth"
                android:contentDescription="@string/abu_planet" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>