<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.client.Activity_Welcome"
    android:background="@drawable/grad_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_back"
        android:textColor="#70416D"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="@font/indie_flower"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableBottom="@drawable/ic_accountprofile"
        android:text="@string/to_my_profile_button"
        android:textColor="#70416D"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/indie_flower"/>

    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableBottom="@drawable/ic_store"
        android:text="@string/to_offers_button"
        android:textColor="#70416D"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/indie_flower"/>

    <Button
        android:id="@+id/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableBottom="@drawable/ic_more"
        android:text="@string/to_more_button"
        android:textColor="#70416D"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/indie_flower"/>

    </LinearLayout>

</RelativeLayout>