<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.client.Activity_More"
    android:background="@drawable/grad_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

    <Button
        android:id="@+id/b1_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableBottom="@drawable/ic_tagface"
        android:text="@string/button_to_abu"
        android:textColor="#70416D"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/indie_flower"/>

    <Button
        android:id="@+id/b2_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableBottom="@drawable/ic_contactus"
        android:text="@string/contact_us_more"
        android:textColor="#70416D"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/indie_flower"/>

        <Button
        android:id="@+id/logout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableBottom="@drawable/ic_face"
        android:text="@string/logout"
        android:textColor="#70416D"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/indie_flower"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F4A9C7"
        app:itemIconTint="#010101"
        app:itemTextColor="#010101"
        app:menu="@menu/bottom_navig_client" />

</RelativeLayout>